--- a/xss-discovery.yaml
+++ b/xss-discovery.yaml
@@ -13,15 +13,15 @@ requests:
     matchers:
       - type: word
         words:
-          - "<b/electro0neinject"
-          - 'electro0neinject""'
-          - "electro0neinject''"
-          - '""electro0neinject'
-          - "''electro0neinject"
-          - 'electro0neinject\\""'
-          - "electro0neinject\\''"
-          - '"\\"electro0neinject'
-          - "'\\'electro0neinject"
+          - "<b/qweqwe"
+          - 'qweqwe""'
+          - "qweqwe''"
+          - '""qweqwe'
+          - "''qweqwe"
+          - 'qweqwe\\""'
+          - "qweqwe\\''"
+          - '"\\"qweqwe'
+          - "'\\'qweqwe"
         part: body
         condition: or
 
@@ -32,14 +32,14 @@ requests:
     matchers:
       - type: word
         words:
-          - "<b/electro0neinject"
-          - 'electro0neinject""'
-          - "electro0neinject''"
-          - '""electro0neinject'
-          - "''electro0neinject"
-          - 'electro0neinject\\""'
-          - "electro0neinject\\''"
-          - '"\\"electro0neinject'
-          - "'\\'electro0neinject"
+          - "<b/qweqwe"
+          - 'qweqwe""'
+          - "qweqwe''"
+          - '""qweqwe'
+          - "''qweqwe"
+          - 'qweqwe\\""'
+          - "qweqwe\\''"
+          - '"\\"qweqwe'
+          - "'\\'qweqwe"
         part: body
         condition: or
